# qmlgit

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  qmlgit.desktop  qmlgit.pro  qmlgit_harmattan.desktop  resources.qrc
qml/: Box.qml  Branch.qml  BranchView.qml  CommitRect.qml  DiffView.qml  Log.qml  LogView.qml  Reorder.qml  branches.qml  diff.qml  log.qml  log2.qml  main.qml  status.qml
qtquick2applicationviewer/: qtquick2applicationviewer.pri
src/: CMakeLists.txt  beziercurve.cpp  beziercurve.h  diffhighlighter.cpp  diffhighlighter.h  gitcache.cpp  gitcache.h  gitcommitlist.cpp  gitcommitlist.h  gitdiff.cpp  gitdiff.h  gitdragmodel.cpp  gitdragmodel.h  gitmodel.cpp  gitmodel.h  gitrepo.cpp  gitrepo.h  main.cpp  src.pri  src.pro
tests/: CMakeLists.txt  tests.pro
tests/gitcache/: gitcache.pro  tst_gitcache.cpp
